k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: ledger-core-system

spec:
  replicas: 3

  selector:
    matchLabels:
      app: ledger-core-system

  template:
    metadata:
      labels:
        app: ledger-core-system

    spec:
      containers:
        - name: ledger-core-container

          image: assadburiro30/ledger-core-system:IMAGE_TAG

          imagePullPolicy: Always

          ports:
            - containerPort: 8081
