k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: ledger-core-service

spec:
  selector:
    app: ledger-core-system

  type: NodePort

  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
      nodePort: 30081
