k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ledger-core-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: ledger.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ledger-core-service
                port:
                  number: 8081
